--- a/style.css
+++ b/style.css
@@ -1,110 +1,63 @@
-html {
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  background: #ffc600;
-  font-family: "helvetica neue";
-  font-size: 20px;
-  font-weight: 200;
+  cursor: default;
 }
 
 body {
-  margin: 0;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-.panels {
   min-height: 100vh;
-  overflow: hidden;
-  display: flex;
 }
-
-.panel {
-  background: #6b0f9c;
-  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
-  color: white;
-  text-align: center;
-  align-items: center;
-  /* Safari transitionend event.propertyName === flex */
-  /* Chrome + FF transitionend event.propertyName === flex-grow */
-  transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
-  font-size: 20px;
-  background-size: cover;
-  background-position: center;
+body .panels {
+  display: flex;
+  font-size: 2rem;
+  height: 100vh;
+  width: 100vw;
+}
+body .panels .panel {
+  transition: 0.5s cubic-bezier(0.25, 0.1, 0.34, -0.79);
   flex: 1;
-  justify-content: center;
   display: flex;
   flex-direction: column;
-}
-
-.panel1 {
-  background-image: url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500);
-}
-
-.panel2 {
-  background-image: url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500);
-}
-
-.panel3 {
-  background-image: url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d);
-}
-
-.panel4 {
-  background-image: url(https://source.unsplash.com/ITjiVXcwVng/1500x1500);
-}
-
-.panel5 {
-  background-image: url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500);
-}
-
-/* Flex Items */
-.panel > * {
-  margin: 0;
-  width: 100%;
-  transition: transform 0.5s;
-  flex: 1 0 auto;
-  display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  overflow: hidden;
 }
-
-.panel > *:first-child {
+body .panels .panel > *:first-child {
+  transition: 0.4s cubic-bezier(0.25, 0.1, 0.34, -0.79);
   transform: translateY(-100%);
 }
-
-.panel.open-active > *:first-child {
-  transform: translateY(0);
-}
-
-.panel > *:last-child {
+body .panels .panel > *:last-child {
+  transition: 0.4s cubic-bezier(0.25, 0.1, 0.34, -0.79);
   transform: translateY(100%);
 }
-
-.panel.open-active > *:last-child {
+body .panels .panel p {
+  padding: 1rem;
+}
+body .panels .panel.active > *:first-child {
+  transform: translateY(100%);
+}
+body .panels .panel.active > *:last-child {
   transform: translateY(0);
 }
-
-.panel p {
-  text-transform: uppercase;
-  font-family: "Amatic SC", cursive;
-  text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
-  font-size: 2em;
-}
-
-.panel p:nth-child(2) {
-  font-size: 4em;
-}
-
-.panel.open {
+body .panels .panel.open {
+  transition: 0.7s cubic-bezier(0.25, 0.1, 0.34, -0.79);
   flex: 5;
-  font-size: 40px;
+  font-size: 3rem;
 }
-
-@media only screen and (max-width: 600px) {
-  .panel p {
-    font-size: 1em;
-  }
+body .panels .panel1 {
+  background-image: url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500);
+}
+body .panels .panel2 {
+  background-image: url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500);
+}
+body .panels .panel3 {
+  background-image: url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d);
+}
+body .panels .panel4 {
+  background-image: url(https://source.unsplash.com/ITjiVXcwVng/1500x1500);
+}
+body .panels .panel5 {
+  background-image: url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500);
 }/*# sourceMappingURL=style.css.map */
